--- a/OutsourceProject20200816/OutsourceProject20200816.csproj
+++ b/OutsourceProject20200816/OutsourceProject20200816.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{A89388ED-BF06-49DA-B2C1-75B2BF439C66}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>OutsourceProject20200816</RootNamespace>
-    <AssemblyName>OutsourceProject20200816</AssemblyName>
+    <AssemblyName>Tool</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -23,7 +24,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
