--- a/OutsourceProject20200816/OutsourceProject20200816.csproj
+++ b/OutsourceProject20200816/OutsourceProject20200816.csproj
@@ -109,6 +109,9 @@
     <PackageReference Include="Selenium.WebDriver">
       <Version>3.141.0</Version>
     </PackageReference>
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.5.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="chromedriver.exe">
